<resources>
    <string name="app_name">YouthLete</string>
    <string name="tagline">CHASE YOUR DREAM WITH US</string>
    <string name="tagline2">Plan your dream to be athlete in the app</string>
    <string name="username">Username</string>
    <string name="member">Not a member?</string>
    <string name="Password">Password</string>
    <string name="Email">E-mail</string>
    <string name="Register_With">Or Register With</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="already_have_account">Already have account?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>